# Polygon_tool_GIS

./: LICENSE  README.md  config.py  export(4).geojson  pyproject.toml  requirements.txt  village.gpkg
example_input/: Sardinia.geojson  Sardinia_example.geojson  Sicilia_example.geojson
logic/: __init__.py  import_module.py  poisson_disc_samples.py  province_generator.py
ui/: buttons.py  image_display.py  main_window.py
